syntax = "proto3";

package psp;
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "UserModel.proto";


service SellerStoreService{
	rpc delRegion(RegionId) returns (google.protobuf.BoolValue){}//删除地址信息
	/*获取地址信息*/
	rpc getProvinceInfo(GetProvinceInfo) returns (ProvinceInfoReply){}//获取省份信息
	rpc getCityInfo(GetCityInfo) returns (CityInfoReply){}//获取省份信息
	rpc getTownInfo(GetTownInfo) returns (TownInfoReply){}//获取省份信息
	/*添加店铺信息*/
	rpc addStoreInfo(StoreInfo) returns (google.protobuf.Empty){}//添加店铺信息

	/*获取店铺信息*/
	rpc getStoreInfo(StoreInfo) returns (getStoreInfoReply){}

	/*获取店铺导航列表*/
	rpc getStoreNavigationList(StoreNavigationInfo) returns (getStoreNavigationReply){}
	rpc addStoreNavigationInfo(StoreNavigationInfo) returns (google.protobuf.Empty){}//添加店铺导航
	rpc updateStoreNavigationInfo(StoreNavigationInfo) returns (google.protobuf.BoolValue){}//编辑店铺导航
	rpc delStoreNavigationInfo(StoreNavigationInfo) returns (google.protobuf.BoolValue){}//删除店铺导航对应列表

	/*获取类目*/
	rpc getBindClassOneInfo(BindClassOneInfo) returns (BindClassOneInfoReply){}//获取一级类目信息
	rpc getBindClassTwoInfo(BindClassTwoInfo) returns (BindClassTwoInfoReply){}//获取二级类目信息
	rpc getBindClassThreeInfo(BindClassThreeInfo) returns (BindClassThreeInfoReply){}//获取二级类目信息
	rpc addBindClass(BindClass) returns (google.protobuf.Empty){}//添加店家商品类目
	rpc getBindClassList(BindClass) returns (BindClassReply){}//获取店铺分类列表

	/*获取商店公司信息*/
	rpc getCompanyInfo(CompanyInfo) returns (CompanyInfoReply){}

	/*获取店铺所卖商品信息*/
	rpc getStoreGoodsClassList(StoreGoodsClassInfo) returns (StoreGoodsClassInfoReply){}//
	rpc addStoreGoodsClass(StoreGoodsClassInfo) returns (google.protobuf.Empty){}//添加店铺分类名称
	rpc updateStoreGoodsClass(StoreGoodsClassInfo) returns (google.protobuf.BoolValue){}//编辑店铺分类名称
	rpc delStoreGoodsClass(CatId) returns (google.protobuf.BoolValue){}//编辑店铺分类名称

	/*店铺关注列表*/
	rpc getStoreCollectList(StoreCollect) returns (StoreCollectReply){}

	/*前台详情*/
	rpc getGoodsInfo(GoodsInfo) returns (GoodsInfoReply){}

} 
message RegionId{
	int32 id =1;//regionID
}

/*获取省份信息*/
message GetProvinceInfo{
	int32 parent_id =1;//父id=0 省份信息
}
message ProvinceInfoReply{
	RegionId region_id =1;//获取省份id
}
/*获取市级信息*/
message GetCityInfo{
	ProvinceInfoReply province_info_reply =1;
}
message CityInfoReply{
	RegionId region_id =1;//获取市级id
}
/*获取区县信息*/
message GetTownInfo{
	CityInfoReply City_info_reply =1;
}
message TownInfoReply{
	RegionId region_id =1;//获取区县id
}
/*获取合一起的地址*/
message StoreRegionInfo{
	ProvinceInfoReply province=1;//省份
	CityInfoReply city=2;//城市
	TownInfoReply town=3;//区县
	string address=4;//详细地址 
}

/*添加店铺信息*/
message StoreInfo{
	StoreBasicInfo store_basic_info =1;//店铺基本信息
	StoreRegionInfo store_region_info =2;//地址信息
}

/*店铺基本信息*/
message StoreBasicInfo{
	uint32 store_id=1;//商铺id
	int32 store_grade_id=2;//店铺等级id
}
/*店铺返回信息*/
message getStoreInfoReply{
	string store_name=1;//店铺名称
    string grade_name=2;//店铺等级名称
    string store_zy=3;//主营商品
    string store_logo=4;//店铺LOGO
    string store_banner=5;//店铺banner
    int32 store_phone=6;//店铺电话
    int32 service_phone=7;//客服号码
    int32 store_qq=8;//客服QQ
    string store_aliwangwang=9;//阿里旺旺
    string province=10;//省份
    string city=11;//城市
    string town=12;//街道
    string address=13;//详细地址
    string store_free_price=14;//满多少免运费
    int32 store_warning_storage=15;//库存预警数
    string seo_keywords=16;//SEO关键字
    string seo_description=17;//SEO店铺描述
}

/*店铺导航基本信息*/
message StoreNavigationInfo{
	uint32 sn_id=1;//导航id
}

message getStoreNavigationReply{
	int32 sn_sort=1;//排序
	string sn_title=2;//导航名称
	int32 sn_is_show=3;//是否显示
	int32 sn_url=4;//新窗口打开
}

message BindClassId{
	int32 id=1;//分类信息id
}
/*获取一级分类*/
message BindClassOneInfo{
	int32 parent_id=1;//父id 一级类目
}
message BindClassOneInfoReply{
	BindClassId bind_class_id=1;//返回一级类目id
}
/*获取二级分类*/
message BindClassTwoInfo{
	BindClassOneInfoReply bind_class_one=1;//二级类目
}
message BindClassTwoInfoReply{
	BindClassId bind_class_id=1;//返回二级类目id
}
/*获取三级分类*/
message BindClassThreeInfo{
	BindClassTwoInfoReply bind_class_two=1;//三级类目
}
message BindClassTwoInfoReply{
	BindClassId bind_class_id=1;//返回三级类目id
}
/*获取总的分类信息*/
message BindClass{
	uint32 store_id=1;//店铺id
	BindClassOneInfo bind_class_one=1;//一级类目
	BindClassTwoInfo bind_class_two=2;//二级
	BindClassThreeInfo bind_class_three=3;//三级
}
message BindClassReply{
	int32 class1=1;//经营类目1
    int32 class2=2;//经营类目2
    int32 class3=3;//经营类目3
    string commis_rate=4;//佣金比例
    int32 status=5;//状态
}

/*获取店铺公司详情*/
message CompanyInfo{
	StoreInfo store_info=1;//店铺基本信息
	BindClass bind_class=2;//类目信息
	int32 store_apply_id=3;//公司的详细信息
}
message CompanyInfoReply{
	string company_name=1；//公司名称
    string company_website=2;//公司网址
    string company_address=3;//公司地址
    int32 company_telephone=4;//公司电话
    int32 company_zipcode=5;//邮政编码
    string company_email=6;//电子邮箱
    int32 company_fax=7;//传真
    string contacts_name=8;//联系人姓名
    int32 contacts_mobile=9;//联系人电话
    string contacts_email=10;//联系人邮箱
    int32 tuijian_id=11;//推荐人id
    string tuijian_name=12;//推荐人姓名
    string business_licence_number=13;//营业执照号
    google.protobuf.business_date=14;//营业执照有效期
    string business_scope=15;//法定经营范围
    int32 reg_capital=16;//注册资金
    int32 orgnization_code=17;//组织机构代码
    string reg_capital=18;//一般纳税人证明
    string legal_person=19;//法人代表姓名
    int32 tax_rate=20;//纳税类型码
    int32 attached_tax_number=21;//税务登记号码
    string bank_account_name=22;//银行开户名
    int32 bank_account_number=23;//公司银行账号
    string bank_branch_name=24;//开户银行支行名称
    int32 bank_province=25;//支行联行号
    string bank_city=26;//开户银行所在地
    string seller_name=27;//卖家账号
    string store_name=28;//店铺名称
    string store_person_name=29;//店铺负责人
    int32 store_person_mobile=30;//负责人号码
    int32 store_person_qq=31;//QQ
    string sc_name=32;//店铺分类
    string store_person_email=33;//负责人邮箱
    Bindclassinfo bindcladd=34;//营业类目
    int32 commis_rate=35;//比例
    int32 electric_class=36;//其它店铺类型（天猫，淘宝）
    int32 shop_id=37;//店铺ID
    string shop_class=38;//主营类目
    string shop_site=39;//网站连接
    string business_licence_cert=40;//企业营业执照副本
    string taxpayer_cert=42;//税务登记证复印件
    string orgnization_cert=43;//织机构代码证复印件
    int32 legal_identity_cert=44;//法人身份证
    int32 store_person_cert=45;//店铺负责人身份证
}
/*店铺出售商品分类信息*/
message StoreGoodsClassInfo{
	uint32 cat_id=1;//店铺所属商品id
}
message StoreGoodsClassInfoReply{
	string cat_name=1;//分类名称
	int32 is_show=2;//是否显示
	int32 is_nav_show=3;//是否导航显示
	int32 cat_sort=4;//排序
}

/*关注店铺信息*/
message StoreCollect{
	uint32 log_id=1;//店铺关注id
}
message StoreCollectReply{
	int32 user_id=1;//会员ID
	string user_name=2;//会员名称
	google.protobuf.add_time=3;//关注时间
}

/*商品详情*/
message GoodsInfo{
	uint32 goods_id=1;//店铺id
}
message GoodsInfoReply{
	string goods_name=1;//商品名称
	int32 cost_price=2;//参考价
	int32 shop_price=3;//商城价
	StoreRegionInfo address=4;//地址
	string image_url=5;//图册
	string spec=6;//规格
	string shipping=7;//快递
}


